# mes-parafina-app

./: .cursorignore  .gitignore  Dockerfile  Dokumentacja.md  Procfile  README.md  SCADA_PANEL_README.md  SCADA_PROMOTIC_STYLE_README.md  WARP.md  ZAWORY.csv  ZAWORY2.csv  aktywne_partie_2025-07-04.csv  alembic.ini  alembic_test.ini  backup_restore_point.sql  caly_kod.py  celery_app.py  chat.txt  database_migration.py  disable-alarms.ps1  disable-sensors.ps1  docker-compose.yml  dodaj_segmenty_zawory.sql  dump_mes_parafina_db (1).sql  dump_mes_parafina_db (2).sql  dump_mes_parafina_db.sql  e_2_e_tests.py  enable-alarms.ps1  enable-sensors.ps1  h --force origin mainq  import_earth_pallets.py  main.py  manage.py  merge_test.py  merged_all_tests.py  mes_context.yml  migrate.ps1  package-lock.json  pomiary.csv  pyproject.toml  (+35 more)
!mix/: --- ZNALEZIONE MOŻLIWE TRASY ---.csv  AKTYWNE_PARTIE_README.md  apollo_tracking_schema.sql  chat.txt  full (1).sql  full.sql  migrate_typy_surowca.py  operacje_log_dump.csv  operacjee-do-wdrozenia.md  requirements2.txt  segm.sql  segmenty (1).sql  segmenty_202507160017.json  segmenty_strefa_czysta.sql  segmenty_strefa_czysta_kompletna.sql  sprzet_dump.csv  test.json  typy_surowca_migration.sql
alembic/: env.py
app/: __init__.py  apollo_service.py  batch_management_service.py  batch_routes.py  brudnopis.json  brudnopis.md  brudnopis.py  commands.py  config.py  cykle_api.py  dashboard_service.py  db.py  earth_pallets_routes.py  extensions.py  heating_service.py  ipomiar_service.py  migration_routes.py  models.py  models_generated.py  monitoring.py  (+18 more)
(+126 files in other folders)
